# cw-schedule-server

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
crates/cw-manager-server/: Cargo.toml
crates/cw-manager-server/src/: init.sql  main.rs  state.rs  utils.rs  ws.rs
src/: main.rs
