[package]
name = "cw-manager-server"
version = "0.1.0"
edition = "2021"

[dependencies]

ntex = { workspace=true, features = ["tokio"] }
serde = { workspace=true, features = ["derive"] }
serde_json.workspace=true
sqlx = { workspace=true, features = ["runtime-tokio", "sqlite"] }
# tokio = { workspace=true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
