[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { workspace = true, features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
toml = "0.8.19"
# clap = { workspace = true, features = ["cargo", "derive"] }
